// Vitest Snapshot v1

exports[`NounBody > renders the NounBody with background 1`] = `
<svg
  height="320"
  shape-rendering="crispEdges"
  viewBox="0 0 320 320"
  width="320"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#d5d7e1"
    height="100%"
    width="100%"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="210"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="220"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="230"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="240"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="250"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="250"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="260"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="260"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="270"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="270"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="280"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="280"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="290"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="290"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="300"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="300"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="310"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="310"
  />
</svg>
`;

exports[`NounBody > renders the NounBody with bounds fit 1`] = `
<svg
  height="110"
  shape-rendering="crispEdges"
  viewBox="90 210 140 110"
  width="140"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="210"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="220"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="230"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="240"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="250"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="250"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="260"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="260"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="270"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="270"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="280"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="280"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="290"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="290"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="300"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="300"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="310"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="310"
  />
</svg>
`;

exports[`NounBody > renders the NounBody without background 1`] = `
<svg
  height="320"
  shape-rendering="crispEdges"
  viewBox="0 0 320 320"
  width="320"
  xmlns="http://www.w3.org/2000/svg"
>
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="210"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="220"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="230"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="140"
    x="90"
    y="240"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="250"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="250"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="260"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="260"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="270"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="270"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="280"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="280"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="290"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="290"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="300"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="300"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="20"
    x="90"
    y="310"
  />
  <rect
    fill="#807f7e"
    height="10"
    width="110"
    x="120"
    y="310"
  />
</svg>
`;
